<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ezrassor_teleop_interfaces</name>
  <version>1.0.0</version>
  <description>ROS2 Package containing interfaces for ezrassor_teleop_actions. Taken from ROS1 version of ezrassor_teleop_msgs and ezrassor_teleop_actions</description>
  <maintainer email="andy.ponce@outlook.com">andyp</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/FlaSpaceInst/EZ-RASSOR</url>
  <!-- Beginning of Added Dependencies for interfaces -->
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend> <!-- TODO: Check if necessary to have this -->
  <depend>std_msgs</depend> <!-- TODO: Check if necessary to have this -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- End of Added Dependencies for interfaces -->
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
